--- a/unit-test-dependencies-tutorial/Info.plist
+++ b/unit-test-dependencies-tutorial/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Application uses user location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Needs location service from the user</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
